<resources>
    <string name="app_name">Hackaton</string>
    <string name="login">Войти</string>
    <string name="profile">profile</string>
    <string name="game">game</string>
    <string name="materials">materials</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="InOffice">В офисе</string>
    <string name="welcoming">Добро Пожаловать</string>
    <string name="write_email">Введите email</string>
    <string name="write_password">Введите пароль</string>
    <string name="sign_in">Войти</string>
    <string name="sign_in_1"><u>Войти</u></string>
    <string name="necessary">Обязательно</string>
    <string name="unnecessary">Дополнительно</string>
    <string name="safety_rules">Техника безопасности</string>
    <string name="work_rules">Рабочий регламент</string>
    <string name="inner_system">Внутренний софт</string>
    <string name="company_history">История и цели компании</string>
    <string name="text_getting_to_know_company">Знакомство с компанией и коллегами</string>
    <string name="group_item_1">Обучение технике безопасности</string>
    <string name="group_item_2">Ознакомление с инструкциями и регламентами работы в компании</string>
    <string name="group_item_3">Обучение по работе с внутренней системой управления проектами</string>
    <string name="group_item_4">Обучение корпоративной культуре, пониманию ценностей компании</string>
    <string name="group_item_5">Знакомство с компанией, офисом и коллегами</string>
    <string name="item_list_1">Инструктаж по технике безопасности: \n тесттексттесттексттесттексттесттексттесттексттесттексттесттексттесттексттесттексттесттексттесттексттесттексттесттексттесттексттесттексттесттексттесттекст</string>
    <string name="item_list_2">Правила на рабочем местете: \n сттексттесттексттесттексттесттексттесттексттесттексттесттексттесттексттесттексттесттексттесттексттесттексттесттексттесттекст</string>
    <string name="item_list_3">Правила эвакуации в случае ЧС: \n тесттексттесттексттесттексттесттексттесттексттесттексттесттексттесттексттесттексттесттексттесттекст</string>
    <string name="item_list_4">Первичный инструктаж при приеме на работу: \n тесттексттесттексттесттексттесттексттесттексттесттексттесттексттесттексттесттексттесттексттесттексттесттексттесттекст</string>
    <string name="item_list_5">Первичный инструктаж при приеме на работу от бухгалтерии: \n тесттексттесттексттесттексттесттексттесттексттесттексттесттексттесттексттесттексттесттексттесттексттесттексттесттексттесттексттесттексттесттекст</string>
    <string name="item_list_6">Знакомство с Системой RNS Web</string>
    <string name="item_list_7">Знакомство с историей компании и целями</string>
    <string name="item_list_8">Знакомство с мероприятиями компаний и возможностями по увеличения заработной платы за счет бонусов</string>
    <string name="item_list_9">Знакомство с отделами и офисом</string>
    <string name="item_list_10">Знакомство с командой и коллегами</string>
    <string name="item_list_11">Знакомство с руководителями соседних подразделений</string>
    <string name="materials_extra">Справочные материалы</string>
    <string name="test_text">text</string>
    <string name="TestTB"><u>Техника безопасности</u></string>
    <string name="tbPart">Правила ТБ</string>
    <string name="quest_with_img">вопрос по вариантом ответа - выход</string>
    <string name="answer">Ответ:</string>
    <string name="test_quest_with_var">вопрос по тб с вариантом ответа</string>
    <string name="next_quest">Далее</string>
    <string name="boss_greetings">Привет, я твой босс</string>
    <string name="person_1">Топорков Егор Денисович</string>
    <string name="person_2">Иванов Иван Иванович</string>
    <string name="person_3">Изя</string>
    <string name="person_4">Святов Святослав Святогорович</string>
    <string name="bio_info">Информация о сотруднике…</string>
    <string name="colleges">Коллеги</string>
    <string name="test_img_part">Правила эвакуации в случае ЧС</string>
    <string name="end_test">Завершить</string>
    <string name="task_video"><u>Работа с внутренней системой управления проектами</u></string>
    <string name="video_material">Видео-материал</string>
    <string name="end_video">завершить просмотр</string>
</resources>